# tachyon

./: Cargo.toml  README.md  WORKSPACE
benchmark/poseidon2/: poseidon_benchmark.cc
benchmark/poseidon2/horizen/: Cargo.toml
benchmark/poseidon2/horizen/src/: lib.rs
tachyon/c/zk/plonk/halo2/: buffer_reader.h
tachyon/crypto/hashes/: compressor.h  hasher.h
tachyon/crypto/hashes/sponge/: BUILD.bazel  padding_free_sponge.h  sponge.h  truncated_permutation.h
tachyon/crypto/hashes/sponge/poseidon/: BUILD.bazel  poseidon.h  poseidon_grain_lfsr.h  poseidon_sponge_base.h
tachyon/crypto/hashes/sponge/poseidon2/: poseidon2.h  poseidon2_external_matrix.h  poseidon2_internal_matrix.h  poseidon2_plonky3_internal_matrix.h
tachyon/crypto/sumcheck/multilinear/: sumcheck_verifier.h
tachyon/math/base/: BUILD.bazel  semigroups_unittest.cc
tachyon/math/circle/: BUILD.bazel  circle_additive_subgroup.h  circle_point.h  circle_point_unittest.cc
tachyon/math/circle/generator/: BUILD.bazel  build_defs.bzl  cpu.h.tpl  generator.cc
tachyon/math/circle/m31/: BUILD.bazel
tachyon/math/circle/stark/: BUILD.bazel
tachyon/math/elliptic_curves/: affine_point_unittest.cc  jacobian_point_unittest.cc  point_xyzz_unittest.cc  projective_point_unittest.cc
tachyon/math/elliptic_curves/bn/bn254/: poseidon2.h
tachyon/math/elliptic_curves/msm/algorithms/cuzk/: cuzk.h  cuzk_unittest.cc
tachyon/math/elliptic_curves/short_weierstrass/: affine_point.h  jacobian_point.h  point_xyzz.h  projective_point.h
tachyon/math/elliptic_curves/short_weierstrass/test/: curve_config.h  sw_curve_config.h
tachyon/math/elliptic_curves/twisted_edwards/: BUILD.bazel  affine_point.h  affine_point_impl.h  jacobian_point.h  jacobian_point_impl.h  te_curve.h  te_curve_traits.h
tachyon/math/elliptic_curves/twisted_edwards/generator/: build_defs.bzl  generator.cc
tachyon/math/finite_fields/: BUILD.bazel  packed_prime_field32_avx2.h  packed_prime_field32_avx512.h  packed_prime_field32_neon.h  prime_field_base.h  prime_field_fallback.h  prime_field_gpu.h  prime_field_gpu_debug.h  prime_field_unittest.cc  small_prime_field.h  small_prime_field_mont.h
tachyon/math/finite_fields/baby_bear/: BUILD.bazel  packed_baby_bear_avx2.cc  packed_baby_bear_avx512.cc  packed_baby_bear_neon.cc
tachyon/math/finite_fields/generator/prime_field_generator/: build_defs.bzl  config.h.tpl  prime_field_generator.cc  prime_field_x86.h.tpl
tachyon/math/finite_fields/goldilocks/: poseidon2.h
tachyon/math/finite_fields/koala_bear/: packed_koala_bear_avx2.cc  packed_koala_bear_avx512.cc  packed_koala_bear_neon.cc
tachyon/math/finite_fields/mersenne31/: BUILD.bazel  packed_mersenne31_avx2.cc  packed_mersenne31_avx512.cc  poseidon2.h
tachyon/math/finite_fields/test/: BUILD.bazel
tachyon/math/matrix/: matrix_types.h  prime_field_num_traits.h
tachyon/zk/plonk/halo2/: prover.h
tachyon/zk/plonk/keys/: BUILD.bazel  proving_key.h  verifying_key.h
tachyon/zk/plonk/permutation/: BUILD.bazel  permutation_assembly.h  permutation_proving_key.h
tachyon/zk/r1cs/constraint_system/: BUILD.bazel  circuit.h  quadratic_arithmetic_program.h  quadratic_arithmetic_program_forward.h
tachyon/zk/r1cs/constraint_system/test/: BUILD.bazel  simple_circuit.h
tachyon/zk/r1cs/groth16/: BUILD.bazel  groth16_unittest.cc  key.h  owned_proving_key.h  prove.h  proving_key.h  verifying_key.h
vendors/circom/: README.md  prover_main.cc
vendors/circom/benchmark/: BUILD.bazel  README.md  bit_conversion.h  circom_benchmark.cc  rapidsnark_prover.h  tachyon_runner.h
vendors/circom/circomlib/base/: fr_element_conversion.h  prime_field.h
vendors/circom/circomlib/circuit/: circuit_test.h  quadratic_arithmetic_program.h
vendors/circom/circomlib/zkey/: BUILD.bazel  proving_key.h  verifying_key.h  zkey.h
vendors/scroll-halo2/src/: bn254.rs  bn254_blake2b_writer.cc  bn254_evals.cc  bn254_msm.cc  bn254_msm_gpu.cc  bn254_poly.cc  bn254_poseidon_writer.cc  bn254_prover.cc  bn254_proving_key.cc  bn254_rational_evals.cc  bn254_rational_evals_view.cc  bn254_sha256_writer.cc  bn254_snark_verifier_poseidon_writer.cc  cha_cha20_rng.cc  cha_cha20_rng.rs  xor_shift_rng.cc  xor_shift_rng.rs
