[package]
name = "plonky3_poseidon2_benchmark"
version = "0.0.1"
authors = ["The Tachyon Authors <tachyon-discuss@kroma.network>"]
edition = "2021"
rust-version = "1.56.1"
description = """
Plonky3 Poseidon2 Hash Benchmark
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/kroma-network/tachyon"
readme = "README.md"
categories = ["cryptography"]
keywords = ["tachyon", "benchmark", "plonky3"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "1e87146" }
tachyon_rs = { path = "../../../tachyon/rs" }
