load("//bazel:tachyon_cc.bzl", "tachyon_cc_binary")

package(default_visibility = ["//visibility:public"])

tachyon_cc_binary(
    name = "generator",
    srcs = ["generator.cc"],
    data = ["cpu.h.tpl"],
    deps = [
        "//tachyon/base/console",
        "//tachyon/base/files:file_path_flag",
        "//tachyon/base/flag:flag_parser",
        "//tachyon/build:cc_writer",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)
